base header and footer

--- a/index.html
+++ b/index.html
@@ -8,16 +8,47 @@
 </head>
 <body>
     <div class="container">
-        <div class="header df jc-sa">
-            <div>Reservia</div>
-            <div class="df jc-sa">
+        <div class="header df">
+            <img src="Ressources\logo\Reservia.svg" alt="logo reservia" />
+            <div id="menu" class="df jc-sa">
                 <span>Hégergements</span>
                 <span>Activités</span>
                 <span>S'inscrire</span>
             </div>
         </div>
-        <div class="body"></div>
-        <div class="footer"></div>
+
+        <div class="body">
+        <p>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        BODY
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        </p>
+        </div>
+
+        <div class="footer bloc df jc-sa">
+            <div>
+                <span>A propos</span>
+                <ul>
+                    <li><a>Fonctionnement du site</a></li>
+                    <li><a>Conditions générales de vente</a></li>
+                    <li><a>Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div>
+                <span>Nos hébergements</span>
+                <ul>
+                    <li><a>Charte qualité</a></li>
+                    <li><a>Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div>
+                <span>Assistance</span>  
+                <ul>
+                    <li><a>Centre d'aide</a></li>
+                    <li><a>Nous contacter</a></li>
+                </ul>          
+            </div>
+        </div>
     </div>
 </body>
 </html>
