--- a/index.html
+++ b/index.html
@@ -17,32 +17,48 @@
             </div>
         </div>
 
+        
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <div class="body">
-        <p>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        BODY
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        </p>
-        </div>
-
-        <div class="footer bloc df jc-sa">
             <div>
-                <span>A propos</span>
+                Trouver votre hébergement pour des vacances de rêve<br/>
+                En plein centre ville ou en pleine nature<br/>
+                marseille, France <button>Recherche</button><br/>
+                Filtres Economique Familail Romantique Animaux autorisés<br/>
+                Plus de 500 logements sont disponbiles dans cette ville
+            </div>
+            <div>
+                <div>
+                    <span>Hébergement à <span>Marseille</span></span>
+                </div>
+                <div>
+                    <span>Les plus populaires</span>
+                </div>
+            </div>
+            <div>
+            Activités à Marseille
+            </div>
+        </div>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>        
+
+        <div class="footer bloc df">
+            <div class="bloc-footer">
+                <span class="bold">A propos</span>
                 <ul>
                     <li><a>Fonctionnement du site</a></li>
                     <li><a>Conditions générales de vente</a></li>
                     <li><a>Données et confidentialité</a></li>
                 </ul>
             </div>
-            <div>
-                <span>Nos hébergements</span>
+            <div class="bloc-footer">
+                <span class="bold">Nos hébergements</span>
                 <ul>
                     <li><a>Charte qualité</a></li>
                     <li><a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
-            <div>
-                <span>Assistance</span>  
+            <div class="bloc-footer">
+                <span class="bold">Assistance</span>  
                 <ul>
                     <li><a>Centre d'aide</a></li>
                     <li><a>Nous contacter</a></li>
