working on body + adjustments css lib

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             </div>
         </div>
 
-        
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        <div class="body">
+
+
+
+
+        <div>
             <div>
                 Trouver votre hébergement pour des vacances de rêve<br/>
                 En plein centre ville ou en pleine nature<br/>
@@ -27,19 +29,54 @@
                 Filtres Economique Familail Romantique Animaux autorisés<br/>
                 Plus de 500 logements sont disponbiles dans cette ville
             </div>
-            <div>
-                <div>
-                    <span>Hébergement à <span>Marseille</span></span>
+            <br/>
+            <div class="df">
+                <div class="df fd-c">
+                    <span>Hébergements à <span>Marseille</span></span>
+                    <p>
+                        <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg"><img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/hebergements/large/port.jpg"><img src="./Ressources/hebergements/miniatures/port-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
+                        <a target="_blank" href="Ressources/hebergements/large/mouettes.jpg"><img src="./Ressources/hebergements/miniatures/mouettes-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
+                    </p>
+                    <p>    
+                        <a target="_blank" href="Ressources/hebergements/large/mer.jpg"><img src="./Ressources/hebergements/miniatures/mer-mini.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/hebergements/large/panier.jpg"><img src="./Ressources/hebergements/miniatures/panier-mini.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/hebergements/large/amina.jpg"><img src="./Ressources/hebergements/miniatures/amina-mini.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" /></a>     
+                    </p>
                 </div>
-                <div>
+                <div class="df fd-c">
                     <span>Les plus populaires</span>
+                    <p class="df flex-col ">
+                        <a target="_blank" href="Ressources/hebergements/large/soleil-matin.jpg"><img src="./Ressources/hebergements/miniatures/soleil-matin-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/hebergements/large/coeur-eau.jpg"><img src="./Ressources/hebergements/miniatures/coeur-eau-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
+                        <a target="_blank" href="Ressources/hebergements/large/bleu-blanc.jpg"><img src="./Ressources/hebergements/miniatures/bleu-blanc-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
+                    </p>
                 </div>
             </div>
-            <div>
-            Activités à Marseille
+            <br/>
+            <div class="df fd-c">
+                <span>Activités à Marseille</span>
+                <div class="df">
+                    <p>
+                        <a target="_blank" href="Ressources/activites/large/vieux-port.jpg"><img src="./Ressources/activites/mini/vieux-port-mini.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
+                    </p>
+                    <p>
+                        <a target="_blank" href="Ressources/activites/large/pomegues.jpg"><img src="./Ressources/activites/mini/pomegues-mini.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/activites/large/frioul.jpg"><img src="./Ressources/activites/mini/frioul-mini.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
+                    </p>
+                    <p>   
+                        <a target="_blank" href="Ressources/activites/large/calanques.jpg"><img src="./Ressources/activites/mini/calanques-mini.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
+                    </p>
+                    <p>   
+                        <a target="_blank" href="Ressources/activites/large/longchamp.jpg"><img src="./Ressources/activites/mini/longchamp-mini.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>
+                        <a target="_blank" href="Ressources/activites/large/garde.jpg"><img src="./Ressources/activites/mini/garde-mini.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
+                    </p>
+                </div>
             </div>
         </div>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>        
+
+
+
 
         <div class="footer bloc df">
             <div class="bloc-footer">
