--- a/index.html
+++ b/index.html
@@ -17,45 +17,102 @@
             </div>
         </div>
 
-
-
-
-
         <div>
             <div>
-                Trouver votre hébergement pour des vacances de rêve<br/>
-                En plein centre ville ou en pleine nature<br/>
-                marseille, France <button>Recherche</button><br/>
-                Filtres Economique Familail Romantique Animaux autorisés<br/>
-                Plus de 500 logements sont disponbiles dans cette ville
+                <p>
+                    <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
+                    En plein centre ville ou en pleine nature<br/>
+                </p>
+                <p>
+                    <span class="bold">Marseille, France</span><button>Recherche</button><br/>
+                </p>
+                <p>
+                    Filtres Economique Familail Romantique Animaux autorisés<br/>
+                </p>
+                <p>
+                    Plus de 500 logements sont disponbiles dans cette ville
+                </p>
             </div>
             <br/>
             <div class="df">
-                <div class="df fd-c">
-                    <span>Hébergements à <span>Marseille</span></span>
+                <div class="df fd-c bloc bloc-body-hosting">
+                    <span class="bold" >Hébergements à <span>Marseille</span></span>
+                    <div class="df">
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg"><img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Auberge de la Cannebière</span>
+                            Nuit à partir de 25€
+                        </p>
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/port.jpg"><img src="./Ressources/hebergements/miniatures/port-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Hôtel du port</span>
+                            Nuit à partir de 52€
+                        </p>
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/mouettes.jpg"><img src="./Ressources/hebergements/miniatures/mouettes-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Hôtel Les mouettes</span>
+                            Nuit à partir de 76€
+                        </p>
+                    </div>
+                    <div class="df">
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/mer.jpg"><img src="./Ressources/hebergements/miniatures/mer-mini.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Hôtel de la mer</span>
+                            Nuit à partir de 46€
+                        </p>
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/panier.jpg"><img src="./Ressources/hebergements/miniatures/panier-mini.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Auberge Le Panier</span>
+                            Nuit à partir de 23€
+                        </p>
+                        <p class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/large/amina.jpg"><img src="./Ressources/hebergements/miniatures/amina-mini.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" /></a>
+                            <span class="bold">Hôtel chez Amina</span>
+                            Nuit à partir de 96€
+                        </p>
+                    </div>                                                                                     
                     <p>
-                        <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg"><img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/hebergements/large/port.jpg"><img src="./Ressources/hebergements/miniatures/port-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
-                        <a target="_blank" href="Ressources/hebergements/large/mouettes.jpg"><img src="./Ressources/hebergements/miniatures/mouettes-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
-                    </p>
-                    <p>    
-                        <a target="_blank" href="Ressources/hebergements/large/mer.jpg"><img src="./Ressources/hebergements/miniatures/mer-mini.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/hebergements/large/panier.jpg"><img src="./Ressources/hebergements/miniatures/panier-mini.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/hebergements/large/amina.jpg"><img src="./Ressources/hebergements/miniatures/amina-mini.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" /></a>     
+                        <span class="bold">Afficher Plus</span>
                     </p>
                 </div>
-                <div class="df fd-c">
-                    <span>Les plus populaires</span>
-                    <p class="df flex-col ">
-                        <a target="_blank" href="Ressources/hebergements/large/soleil-matin.jpg"><img src="./Ressources/hebergements/miniatures/soleil-matin-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/hebergements/large/coeur-eau.jpg"><img src="./Ressources/hebergements/miniatures/coeur-eau-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
-                        <a target="_blank" href="Ressources/hebergements/large/bleu-blanc.jpg"><img src="./Ressources/hebergements/miniatures/bleu-blanc-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
-                    </p>
+                <div id="body-hosting-popular" class="bloc df fd-c">
+                    <span class="bold">Les plus populaires</span>
+                    <div class="df fd-c">
+                        <div class="df fd-r">
+                            <p>
+                                <a target="_blank" href="Ressources/hebergements/large/soleil-matin.jpg"><img src="./Ressources/hebergements/miniatures/soleil-matin-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
+                            </p>
+                            <p class="df fd-c">
+                                <span class="bold">Hôtel chez Amina</span>
+                                Nuit à partir de 128€
+                            </p>
+                        </div>
+                        <div class="df fd-r">
+                            <p>
+                                <a target="_blank" href="Ressources/hebergements/large/coeur-eau.jpg"><img src="./Ressources/hebergements/miniatures/coeur-eau-mini.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
+
+                            </p>
+                            <p class="df fd-c">
+                                <span class="bold">Hôtel chez Amina</span>
+                                Nuit à partir de 71€
+                            </p>
+                            
+                        </div>
+                        <div class="df fd-r">
+                            <p>
+                                <a target="_blank" href="Ressources/hebergements/large/bleu-blanc.jpg"><img src="./Ressources/hebergements/miniatures/bleu-blanc-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
+                            </p>
+                            <p class="df fd-c">
+                                <span class="bold">Hôtel chez Amina</span>
+                                Nuit à partir de 68€
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br/>
             <div class="df fd-c">
-                <span>Activités à Marseille</span>
+                <span class="bold">Activités à Marseille</span>
                 <div class="df">
                     <p>
                         <a target="_blank" href="Ressources/activites/large/vieux-port.jpg"><img src="./Ressources/activites/mini/vieux-port-mini.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
@@ -75,11 +132,8 @@
             </div>
         </div>
 
-
-
-
-        <div class="footer bloc df">
-            <div class="bloc-footer">
+        <div class="footer bloc df jc-sb">
+            <div>
                 <span class="bold">A propos</span>
                 <ul>
                     <li><a>Fonctionnement du site</a></li>
@@ -87,14 +141,14 @@
                     <li><a>Données et confidentialité</a></li>
                 </ul>
             </div>
-            <div class="bloc-footer">
+            <div>
                 <span class="bold">Nos hébergements</span>
                 <ul>
                     <li><a>Charte qualité</a></li>
                     <li><a>Soumettre votre hôtel</a></li>
                 </ul>
             </div>
-            <div class="bloc-footer">
+            <div>
                 <span class="bold">Assistance</span>  
                 <ul>
                     <li><a>Centre d'aide</a></li>
