working on activities

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
             </div>
             <br/>
-            <div class="df">
+            <div class="df jc-sb">
                 <div class="df fd-c bloc bloc-body-hosting">
                     <span class="bold" >Hébergements à <span>Marseille</span></span>
                     <div class="df">
@@ -75,7 +75,7 @@
                         <span class="bold">Afficher Plus</span>
                     </p>
                 </div>
-                <div id="body-hosting-popular" class="bloc df fd-c">
+                <div class="bloc df fd-c bloc-body-hosting">
                     <span class="bold">Les plus populaires</span>
                     <div class="df fd-c">
                         <div class="df fd-r">
@@ -83,7 +83,7 @@
                                 <a target="_blank" href="Ressources/hebergements/large/soleil-matin.jpg"><img src="./Ressources/hebergements/miniatures/soleil-matin-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
                             </p>
                             <p class="df fd-c">
-                                <span class="bold">Hôtel chez Amina</span>
+                                <span class="bold">Hôtel Le soleil du matin</span>
                                 Nuit à partir de 128€
                             </p>
                         </div>
@@ -93,7 +93,7 @@
 
                             </p>
                             <p class="df fd-c">
-                                <span class="bold">Hôtel chez Amina</span>
+                                <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
                                 Nuit à partir de 71€
                             </p>
                             
@@ -103,7 +103,7 @@
                                 <a target="_blank" href="Ressources/hebergements/large/bleu-blanc.jpg"><img src="./Ressources/hebergements/miniatures/bleu-blanc-mini.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
                             </p>
                             <p class="df fd-c">
-                                <span class="bold">Hôtel chez Amina</span>
+                                <span class="bold">Hôtel Tout bleu et Blanc</span>
                                 Nuit à partir de 68€
                             </p>
                         </div>
@@ -114,20 +114,38 @@
             <div class="df fd-c">
                 <span class="bold">Activités à Marseille</span>
                 <div class="df">
-                    <p>
-                        <a target="_blank" href="Ressources/activites/large/vieux-port.jpg"><img src="./Ressources/activites/mini/vieux-port-mini.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
-                    </p>
-                    <p>
-                        <a target="_blank" href="Ressources/activites/large/pomegues.jpg"><img src="./Ressources/activites/mini/pomegues-mini.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/activites/large/frioul.jpg"><img src="./Ressources/activites/mini/frioul-mini.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
-                    </p>
-                    <p>   
-                        <a target="_blank" href="Ressources/activites/large/calanques.jpg"><img src="./Ressources/activites/mini/calanques-mini.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
-                    </p>
-                    <p>   
-                        <a target="_blank" href="Ressources/activites/large/longchamp.jpg"><img src="./Ressources/activites/mini/longchamp-mini.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>
-                        <a target="_blank" href="Ressources/activites/large/garde.jpg"><img src="./Ressources/activites/mini/garde-mini.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
-                    </p>
+                    <div class="activities">
+                        <p>
+                            <a target="_blank" href="Ressources/activites/large/vieux-port.jpg"><img src="./Ressources/activites/mini/vieux-port-mini.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
+                        </p>
+                        Vieux Port
+                    </div>
+                    <div class="activities">
+                        <p class="activity">
+                            <a target="_blank" href="Ressources/activites/large/pomegues.jpg"><img src="./Ressources/activites/mini/pomegues-mini.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
+                        </p>
+                        Fort de Pomègues
+                        <p class="activity">
+                            <a target="_blank" href="Ressources/activites/large/frioul.jpg"><img src="./Ressources/activites/mini/frioul-mini.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
+                        </p>
+                        Iles du Frioul
+                    </div>
+                    <div class="activities">
+                        <p>
+                            <a target="_blank" href="Ressources/activites/large/calanques.jpg"><img src="./Ressources/activites/mini/calanques-mini.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
+                        </p>   
+                        Parc Nationale des Calanques
+                    </div>
+                    <div class="activities">
+                        <p class="activity">
+                            <a target="_blank" href="Ressources/activites/large/longchamp.jpg"><img src="./Ressources/activites/mini/longchamp-mini.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>                       
+                        </p>   
+                        Notre-Dame-de-la-Garde
+                        <p class="activity">
+                            <a target="_blank" href="Ressources/activites/large/garde.jpg"><img src="./Ressources/activites/mini/garde-mini.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
+                        </p>
+                        Parc Longchamp
+                    </div>
                 </div>
             </div>
         </div>
