working on body-search

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
                     <span class="bold">Marseille, France</span><button>Recherche</button><br/>
                 </p>
                 <p>
-                    Filtres Economique Familail Romantique Animaux autorisés<br/>
+                    <ul>
+                        <li>Filtres</li>
+                        <li><p><img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span></p></li>
+                        <li><p><img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span></p></li>
+                        <li><p><img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span></p></li>
+                        <li><p><img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span></p></li>
+                    </ul>
+                    <br/>
                 </p>
                 <p>
                     Plus de 500 logements sont disponbiles dans cette ville
@@ -76,7 +83,10 @@
                     </p>
                 </div>
                 <div class="bloc df fd-c bloc-body-hosting">
-                    <span class="bold">Les plus populaires</span>
+                    <div class="df jc-sb">
+                        <span class="bold">Les plus populaires</span>
+                        <img src="./Ressources/logo/growth.png" alt="logo des hébergements les plus populaires" />
+                    </div>
                     <div class="df fd-c">
                         <div class="df fd-r">
                             <p>
