--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id="header" class="df">
             <img src="Ressources/logo/big/Reservia.svg" alt="logo reservia" />
             <div id="menu" class="df jc-sa">
-                <a>Hégergements</a>
-                <a>Activités</a>
-                <a>S'inscrire</a>
+                <a href="#body-hosting">Hégergements</a>
+                <a href="#body-activity">Activités</a>
+                <a><span id="register">S'inscrire</span></a>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
                 </p>
             </div>
             <br/>
-            <div class="df jc-sb">
+            <div id="body-hosting" class="df jc-sb">
                 <div class="df fd-c bloc bloc-body-hosting">
                     <span class="bold" >Hébergements à <span>Marseille</span></span>
                     <div class="df">
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <br/>
-            <div class="df fd-c">
+            <div id="body-activity" class="df fd-c">
                 <span class="bold">Activités à Marseille</span>
                 <div class="df">
                     <div class="activities">
