--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <img src="./Ressources/logo/gps.png" alt="logo" /><input type="search" name="search" id="search" value="Marseille, France" /><button>Rechercher</button><br/>
                 </p> 
                 <div>
-                        <li class="search-filters"><span class="bold">Filtres</span></li>
-                        <li class="search-filters"><p><img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span></p></li>
-                        <li class="search-filters"><p><img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span></p></li>
-                        <li class="search-filters"><p><img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span></p></li>
-                        <li class="search-filters"><p><img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span></p></li>
+                        <span class="bold">Filtres</span>
+                        <img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span>
+                        <img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span>
+                        <img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span>
+                        <img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span>
                 </div> 
                 <p>
                     <img src="#" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
