--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </ul>
                 </div> 
                 <p>
-                    <img src="#" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
+                    <img src="./Ressources/logo/" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
                 </p>
             </div>
             <br/>
