--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <p>
                     <img src="./Ressources/logo/gps.png" alt="logo" /><input type="search" name="search" id="search" value="Marseille, France" /><button>Rechercher</button><br/>
                 </p> 
-                <div>
+                <div class="df">
                         <span class="bold">Filtres</span>
-                        <img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span>
-                        <img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span>
-                        <img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span>
-                        <img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span>
+                        <div class="filter" ><img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span></div> 
+                        <div class="filter" ><img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span></div> 
+                        <div class="filter" ><img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span></div> 
+                        <div class="filter" ><img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span></div> 
                 </div> 
                 <p>
-                    <img src="#" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
+                    <img src="./Ressources/logo/i.png" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
                 </p>
             </div>
             <br/>
