working on rechercher

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
                     En plein centre ville ou en pleine nature<br/>
                 </p>
-                <p>
-                    <img src="./Ressources/logo/gps.png" alt="logo" /><input type="search" name="search" id="search" value="Marseille, France" /><button>Rechercher</button><br/>
+                <p class="df">
+                    <img src="./Ressources/logo/gps.png" alt="logo" />
+                    <input type="search" name="search" id="search" value="Marseille, France" />
+                    <div id="body-search-btn">Rechercher</div id="body-search-btn"><br/>
                 </p> 
                 <div class="df">
                         <span class="bold">Filtres</span>
