working on thumbnail

--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
             <br/>
             <div id="body-hosting" class="df jc-sb">
                 <div class="df fd-c bloc bloc-body-hosting">
-                    <span class="bold" >Hébergements à <span>Marseille</span></span>
+                    <span class="bold" >Hébergements à <span>Marseille</span></span><br/>
                     <div class="df">
-                        <p class="df fd-c">
-                            <a href="https://www.google.com/" target="_blank">
-                            <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg"><img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
-                            <span class="bold">Auberge de la Cannebière</span>
-                            Nuit à partir de 25€
+                        <p>
+                            <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg">
+                                <div class="thumbnail df fd-c">
+                                    <img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />
+                                    <span class="bold">Auberge de la Cannebière</span><br/>
+                                    Nuit à partir de 25€
+                                    <div class="stars">****</div>
+                                </div>
                             </a>
                         </p>
                         <p class="df fd-c">
