--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/9405848609.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css\stlye-desktop.css"/>
@@ -24,20 +25,28 @@
                     <span class="bold">Trouver votre hébergement pour des vacances de rêve</span><br/>
                     En plein centre ville ou en pleine nature<br/>
                 </p>
-                <p class="df">
-                    <img src="./Ressources/logo/gps.png" alt="logo" />
+                <div class="df">
+                    <span><i class="fas fa-map-marker-alt"></i></span>
                     <input type="search" name="search" id="search" value="Marseille, France" />
                     <div id="body-search-btn">Rechercher</div id="body-search-btn"><br/>
-                </p> 
+                    </div> 
                 <div class="df">
                     <span class="bold">Filtres</span>
-                    <div class="filter" ><img src="./Ressources/logo/dollar.png" alt="logo" /> <span class="bold">Economique</span></div> 
-                    <div class="filter" ><img src="./Ressources/logo/family.png" alt="logo" /> <span class="bold">Familial</span></div> 
-                    <div class="filter" ><img src="./Ressources/logo/hearth.png" alt="logo" /> <span class="bold">Romantique</span></div> 
-                    <div class="filter" ><img src="./Ressources/logo/dog.png" alt="logo" /> <span class="bold">Animaux autorisés</span></div> 
+                    <div class="filter" >
+                        <span style="color: #0065FC;"><i class="fas fa-money-bill-wave"></i></span><span class="bold">Economique</span>
+                    </div> 
+                    <div class="filter" >
+                        <span style="color: #0065FC;"><i class="fas fa-child"></i></span><span class="bold">Familial</span>
+                    </div> 
+                    <div class="filter" >
+                        <span style="color: #0065FC;"><i class="fas fa-heart"></i></span><span class="bold">Romantique</span>
+                    </div> 
+                    <div class="filter" >
+                        <span style="color: #0065FC;"><i class="fas fa-dog"></i></span><span class="bold">Animaux autorisés</span>
+                    </div> 
                 </div> 
                 <p>
-                    <img src="./Ressources/logo/i.png" alt="logo"/>Plus de 500 logements sont disponbiles dans cette ville
+                    <span style="color: #0065FC;"><i class="fas fa-info-circle"></i></i></span>Plus de 500 logements sont disponbiles dans cette ville
                 </p>
             </div>
             <br/>
@@ -52,7 +61,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge de la Cannebière</span>
                                         <div class="thin">Nuit à partir de 25€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -64,7 +73,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel du port</span>
                                         <div class="thin">Nuit à partir de 52€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -76,7 +85,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel Les mouettes</span>
                                         <div class="thin">Nuit à partir de 76€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -90,7 +99,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel de la mer</span>
                                         <div class="thin"> Nuit à partir de 46€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>                               
                             </a>
@@ -102,7 +111,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge Le Panier</span>
                                         <div class="thin"> Nuit à partir de 23€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>
                                 </div>
                             </a>
@@ -114,7 +123,7 @@
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel chez Amina</span>
                                         <div class="thin">Nuit à partir de 96€</div>
-                                        <img src="./Ressources/logo/star.png" alt="logo" />
+                                        <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                     </div>                                       
                                 </div>                                             
                             </a>
@@ -127,7 +136,7 @@
                 <div class="bloc df fd-c body-hosting">
                     <div class="df jc-sb">
                         <span class="bold">Les plus populaires</span>
-                        <img src="./Ressources/logo/growth.png" alt="logo des hébergements les plus populaires" />
+                        <span><i class="fas fa-chart-line"></i></span>
                     </div>
 
 
@@ -143,7 +152,7 @@
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Le soleil du matin</span>
                                     <div class="thin">Nuit à partir de 128€</div>
-                                    <img src="./Ressources/logo/star.png" alt="logo" />
+                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +167,7 @@
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
                                     <div class="thin">Nuit à partir de 71€</div>
-                                    <img src="./Ressources/logo/star.png" alt="logo" />
+                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                 </div>
                             </div>
                         </div>        
@@ -171,7 +180,7 @@
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Tout bleu et Blanc</span>
                                     <div class="thin">Nuit à partir de 68€</div>
-                                    <img src="./Ressources/logo/star.png" alt="logo" />
+                                    <span style="color: #0065FC;"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
                                 </div>
                             </div>
                         </div>
