menu nav + border

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container">
         <div id="header" class="df">
-            <img src="Ressources/logo/big/Reservia.svg" alt="logo reservia" />
-            <div id="menu" class="df jc-sa">
+            <img src="Ressources/logo/Reservia.svg" alt="logo reservia" />
+            <nav id="menu" class="df jc-sa">
                 <a href="#body-hosting">Hégergements</a>
                 <a href="#body-activity">Activités</a>
                 <a href="#"><span id="register">S'inscrire</span></a>
-            </div>
+            </nav>
         </div>
         <div id="body">
             <div>
@@ -57,7 +57,7 @@
                         <p>
                             <a target="_blank" href="Ressources/hebergements/large/cannebiere.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/miniatures/cannebiere-mini.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
+                                    <img src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge de la Cannebière</span>
                                         <div class="thin">Nuit à partir de 25€</div>
