--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="df fd-c bloc body-hosting">
                     <span class="bold" >Hébergements à Marseille<br/>
                     <div class="df">
-                        <p>
+                        <div>
                             <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
@@ -65,8 +65,8 @@
                                     </div>
                                 </div>
                             </a>
-                        </p>
-                        <p>
+                        </div>
+                        <div>
                             <a target="_blank" href="Ressources/hebergements/port.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
@@ -77,8 +77,8 @@
                                     </div>
                                 </div>
                             </a>
-                        </p>
-                        <p>
+                        </div>
+                        <div>
                             <a target="_blank" href="Ressources/hebergements/mouettes.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                             </a>
-                        </p>
+                        </div>
                     </div>
                     <div class="df">
                         <p class="df fd-c">
@@ -138,14 +138,12 @@
                         <span class="bold">Les plus populaires</span>
                         <span><i class="fas fa-chart-line"></i></span>
                     </div>
-                  
                     <div>
-
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
-                                <p>
+                                <div>
                                     <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg"><img src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
-                                </p>
+                                </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Le soleil du matin</span>
                                     <div class="thin">Nuit à partir de 128€</div>
@@ -153,14 +151,11 @@
                                 </div>
                             </div>
                         </div>
-
-
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
-                                <p>
+                                <div>
                                     <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg"><img src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
-
-                                </p>
+                                </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
                                     <div class="thin">Nuit à partir de 71€</div>
@@ -171,9 +166,9 @@
 
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
-                                <p>
+                                <div>
                                     <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg"><img src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
-                                </p>
+                                </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Tout bleu et Blanc</span>
                                     <div class="thin">Nuit à partir de 68€</div>
@@ -181,9 +176,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                     </div>
                 </div>
             </div>
