--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css\stlye-desktop.css"/>
     <link rel="stylesheet" media="screen and (max-width: 1024px)" href="./css/style-pad.css" /> 
-    <link rel="stylesheet" media="screen and (max-width: 400px)" href="./css/style-phone.css" /> 
+    <link rel="stylesheet" media="screen and (max-width: 420px)" href="./css/style-phone.css" /> 
     <title>Reservia</title>
 </head>
 <body>
@@ -57,7 +57,7 @@
                         <div>
                             <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge de la Cannebière</span>
                                         <div class="thin">Nuit à partir de 25€</div>
@@ -69,7 +69,7 @@
                         <div>
                             <a target="_blank" href="Ressources/hebergements/port.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/port.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" />
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel du port</span>
                                         <div class="thin">Nuit à partir de 52€</div>
@@ -81,7 +81,7 @@
                         <div>
                             <a target="_blank" href="Ressources/hebergements/mouettes.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mouettes.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" />                                    
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel Les mouettes</span>
                                         <div class="thin">Nuit à partir de 76€</div>
@@ -95,7 +95,7 @@
                         <p class="df fd-c">
                             <a target="_blank" href="Ressources/hebergements/mer.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel de la mer</span>
                                         <div class="thin"> Nuit à partir de 46€</div>
@@ -107,7 +107,7 @@
                         <p class="df fd-c">
                             <a target="_blank" href="Ressources/hebergements/large/panier.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge Le Panier</span>
                                         <div class="thin"> Nuit à partir de 23€</div>
@@ -119,7 +119,7 @@
                         <p class="df fd-c">
                             <a target="_blank" href="Ressources/hebergements/amina.jpg">
                                 <div class="hosting-thumbnail df fd-c">
-                                    <img src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
+                                    <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Hôtel chez Amina</span>
                                         <div class="thin">Nuit à partir de 96€</div>
@@ -133,7 +133,7 @@
                         <span class="bold show-more">Afficher Plus</span>
                     </p>
                 </div>
-                <div class="bloc df fd-c body-hosting">
+                <div id="" class="bloc df fd-c body-hosting">
                     <div class="df jc-sb">
                         <span class="bold">Les plus populaires</span>
                         <span><i class="fas fa-chart-line"></i></span>
@@ -142,7 +142,9 @@
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
                                 <div>
-                                    <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg"><img src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" /></a>
+                                    <a target="_blank" href="Ressources/hebergements/soleil-matin.jpg">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/soleil-matin.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />
+                                    </a>
                                 </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Le soleil du matin</span>
@@ -154,7 +156,7 @@
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
                                 <div>
-                                    <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg"><img src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
+                                    <a target="_blank" href="Ressources/hebergements/coeur-eau.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/hebergements/coeur-eau.jpg" alt="photo de la chambre 2" title="Cliquez pour agrandir l'image" /></a>   
                                 </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Au coeur de l'eau Chambres d'hôtes</span>
@@ -167,7 +169,8 @@
                         <div class="popular-thumbnail">
                             <div class="df fd-r">
                                 <div>
-                                    <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg"><img src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
+                                    <a target="_blank" href="Ressources/hebergements/bleu-blanc.jpg">
+                                        <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/bleu-blanc.jpg" alt="photo de la chambre 3" title="Cliquez pour agrandir l'image" /></a>  
                                 </div>
                                 <div class="popular-thumbnail-text">
                                     <span class="bold">Hôtel Tout bleu et Blanc</span>
@@ -185,33 +188,33 @@
                 <div class="df">
                     <div class="activities">
                         <p>
-                            <a target="_blank" href="Ressources/activites/vieux-port.jpg"><img src="./Ressources/activites/vieux-port.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
+                            <a target="_blank" href="Ressources/activites/vieux-port.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/vieux-port.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
                         </p>
                         Vieux Port
                     </div>
                     <div class="activities">
                         <p class="activity">
-                            <a target="_blank" href="Ressources/activites/pomegues.jpg"><img src="./Ressources/activites/pomegues.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
+                            <a target="_blank" href="Ressources/activites/pomegues.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/pomegues.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
                         </p>
                         Fort de Pomègues
                         <p class="activity">
-                            <a target="_blank" href="Ressources/activites/frioul.jpg"><img src="./Ressources/activites/frioul.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
+                            <a target="_blank" href="Ressources/activites/frioul.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/frioul.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
                         </p>
                         Iles du Frioul
                     </div>
                     <div class="activities">
                         <p>
-                            <a target="_blank" href="Ressources/activites/calanques.jpg"><img src="./Ressources/activites/calanques.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
+                            <a target="_blank" href="Ressources/activites/calanques.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/calanques.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
                         </p>   
                         Parc Nationale des Calanques
                     </div>
                     <div class="activities">
                         <p class="activity">
-                            <a target="_blank" href="Ressources/activites/longchamp.jpg"><img src="./Ressources/activites/longchamp.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>                       
+                            <a target="_blank" href="Ressources/activites/longchamp.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/longchamp.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>                       
                         </p>   
                         Notre-Dame-de-la-Garde
                         <p class="activity">
-                            <a target="_blank" href="Ressources/activites/garde.jpg"><img src="./Ressources/activites/garde.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
+                            <a target="_blank" href="Ressources/activites/garde.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/garde.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
                         </p>
                         Parc Longchamp
                     </div>
