--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             </div>
             <br/>
             <div id="body-hosting" class="df jc-sb">
-                <div class="df fd-c bloc body-hosting">
+                <section class="df fd-c bloc body-hosting">
                     <span class="bold" >Hébergements à Marseille<br/>
                     <div class="df">
                         <div>
                             <a target="_blank" href="Ressources/hebergements/cannebiere.jpg">
-                                <div class="hosting-thumbnail df fd-c">
+                                <div class="hosting-thumbnail df fd-c">   
                                     <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/cannebiere.jpg" alt="photo de la chambre 1" title="Cliquez pour agrandir l'image" />   
                                     <div class="hosting-thumbnail-text">
                                         <span class="bold">Auberge de la Cannebière</span>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="df">
-                        <p class="df fd-c">
+                        <div class="df fd-c">
                             <a target="_blank" href="Ressources/hebergements/mer.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/mer.jpg" alt="photo de la chambre 4" title="Cliquez pour agrandir l'image" />
@@ -103,9 +103,9 @@
                                     </div>
                                 </div>                               
                             </a>
-                        </p>
-                        <p class="df fd-c">
-                            <a target="_blank" href="Ressources/hebergements/large/panier.jpg">
+                        </div>
+                        <div class="df fd-c">
+                            <a target="_blank" href="Ressources/hebergements/panier.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/panier.jpg" alt="photo de la chambre 5" title="Cliquez pour agrandir l'image" />
                                     <div class="hosting-thumbnail-text">
@@ -115,8 +115,8 @@
                                     </div>
                                 </div>
                             </a>
-                        </p>
-                        <p class="df fd-c">
+                        </div>
+                        <div class="df fd-c">
                             <a target="_blank" href="Ressources/hebergements/amina.jpg">
                                 <div class="hosting-thumbnail df fd-c">
                                     <img class="hosting-thumbnail-photo" src="./Ressources/hebergements/amina.jpg" alt="photo de la chambre 6" title="Cliquez pour agrandir l'image" />          
@@ -127,13 +127,13 @@
                                     </div>                                       
                                 </div>                                             
                             </a>
-                        </p>
+                        </div>
                     </div> 
                     <p>
                         <span class="bold show-more">Afficher Plus</span>
                     </p>
-                </div>
-                <div id="" class="bloc df fd-c body-hosting">
+                </section>
+                <section id="" class="bloc df fd-c body-hosting">
                     <div class="df jc-sb">
                         <span class="bold">Les plus populaires</span>
                         <span><i class="fas fa-chart-line"></i></span>
@@ -180,42 +180,42 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
             <br/>
             <div id="body-activity" class="df fd-c">
                 <span class="bold">Activités à Marseille</span>
                 <div class="df">
                     <div class="activities">
-                        <p>
+                        <div>
                             <a target="_blank" href="Ressources/activites/vieux-port.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/vieux-port.jpg" alt="photo de l'activité 1" title="Cliquez pour agrandir l'image" /></a>
-                        </p>
+                        </div>
                         Vieux Port
                     </div>
                     <div class="activities">
-                        <p class="activity">
+                        <div class="activity">
                             <a target="_blank" href="Ressources/activites/pomegues.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/pomegues.jpg" alt="photo de l'activité 2" title="Cliquez pour agrandir l'image" /></a>
-                        </p>
+                        </div>
                         Fort de Pomègues
-                        <p class="activity">
+                        <div class="activity">
                             <a target="_blank" href="Ressources/activites/frioul.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/frioul.jpg" alt="photo de l'activité 3" title="Cliquez pour agrandir l'image" /></a>
-                        </p>
+                        </div>
                         Iles du Frioul
                     </div>
                     <div class="activities">
-                        <p>
+                        <div>
                             <a target="_blank" href="Ressources/activites/calanques.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/calanques.jpg" alt="photo de l'activité 4" title="Cliquez pour agrandir l'image" /></a>
-                        </p>   
+                        </div>   
                         Parc Nationale des Calanques
                     </div>
                     <div class="activities">
-                        <p class="activity">
+                        <div class="activity">
                             <a target="_blank" href="Ressources/activites/longchamp.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/longchamp.jpg" alt="photo de l'activité 6" title="Cliquez pour agrandir l'image" /></a>                       
-                        </p>   
+                        </div>   
                         Notre-Dame-de-la-Garde
-                        <p class="activity">
+                        <div class="activity">
                             <a target="_blank" href="Ressources/activites/garde.jpg"><img class="hosting-thumbnail-photo" src="./Ressources/activites/garde.jpg" alt="photo de l'activité 5" title="Cliquez pour agrandir l'image" /></a> 
-                        </p>
+                        </div>
                         Parc Longchamp
                     </div>
                 </div>
